@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: zaptel.9.man,v 0.9.2.1 2007/01/05 02:49:07 brian Exp $
+.\" @(#) $Id: zaptel.9.man,v 0.9.2.2 2007/03/05 22:57:16 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2007/01/05 02:49:07 $ by $Author: brian $
+.\" Last Modified $Date: 2007/03/05 22:57:16 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: zaptel.9.man,v $
+.\" Revision 0.9.2.2  2007/03/05 22:57:16  brian
+.\" - updates to pass check target
+.\"
 .\" Revision 0.9.2.1  2007/01/05 02:49:07  brian
 .\" - added zaptel manpages
 .\"
@@ -130,3 +133,104 @@ sort-adjacent-labels
 .BI "int zt_unregister(struct zt_span *" span );
 .ad b
 .PD
+.\"
+.\"
+.SH ARGUMENTS
+.PP
+Various.
+.\"
+.\"
+.SH OVERVIEW
+.PP
+The
+.BR zaptel (4)
+driver provides the Zapata Telephony interface as a
+.I STREAMS
+driver that provides the listed exported kernel functions.
+.\"
+.\"
+.SH DESCRIPTION
+.PP
+These functions are currently undocumented.
+.PP
+Functions provided by the
+.BR zaptel (4)
+driver are as folows:
+.PP
+.TS
+tab(:);
+lb
+l.
+ZAPTEL Function
+zaptel
+zt_alarm_notify
+zt_dtmf_tone
+zt_dynamic_receive
+zt_dynamic_register
+zt_dynamic_unregister
+zt_ec_chunk
+zt_ec_span
+zt_hooksig
+zt_init_tone_state
+zt_lboname
+zt_qevent_lock
+zt_qevent_nolock
+zt_rbsbits
+zt_receive
+zt_register
+zt_set_dynamic_ioctl
+zt_tone_nextsample
+zt_transmit
+zt_txtone_nextsample
+zt_unregister
+.TE
+.\"
+.\"
+.SH CONTEXT
+.PP
+Various.
+.\"
+.\"
+.SH MP-STREAMS
+.PP
+Undocumented.
+.\"
+.\"
+.SH NOTICES
+.PP
+The
+.BR zaptel (4)
+driver is planned, but currently incomplete.
+.\"
+.\"
+.SH "SEE ALSO"
+.PP
+.IR STREAMS (9).
+.\"
+.\"
+.SH BUGS
+.PP
+As the driver is incomplete, all bugs are unwritten.
+.\"
+.\"
+.SH COMPATIBILITY
+.PP
+Zapata Telephony.
+.\"
+.\"
+.SH CONFORMANCE
+.PP
+None.
+.\"
+.\"
+.SH HISTORY
+.PP
+The
+.BR zaptel (4)
+driver is planned but incomplete.
+.\"
+.\"
+.[
+$LIST$
+.]
+.TI
