@@ -1,7 +1,7 @@
 # vim: ft=spec sw=4 et tw=78 com=b\:#,fb\:- fo+=tcqlorn nocin nosi
 # =============================================================================
 # 
-# @(#) $RCSfile: strchan.spec.in,v $ $Name:  $($Revision: 0.9.2.5 $) $Date: 2007/03/04 10:01:32 $
+# @(#) $RCSfile: strchan.spec.in,v $ $Name:  $($Revision: 0.9.2.6 $) $Date: 2007/03/05 22:57:15 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -46,7 +46,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2007/03/04 10:01:32 $ by $Author: brian $
+# Last Modified $Date: 2007/03/05 22:57:15 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -1906,6 +1906,9 @@ fi
 %changelog
 # ---------------------------------------------------------------------------
 # $Log: strchan.spec.in,v $
+# Revision 0.9.2.6  2007/03/05 22:57:15  brian
+# - updates to pass check target
+#
 
 * Sun Mar  4 2007 Brian Bidulock <bidulock@openss7.org>
 - Revision 0.9.2.5  2007/03/04 10:01:32  brian
