@@ -1,5 +1,6 @@
 2007-03-05  Brian Bidulock  <bidulock@openss7.org>
 
+	* doc/man/man9/zaptel.9.man: updates to pass check target
 	* acinclude.m4: correct version numbers
 	* strbcm.spec.in: do not release source package
 
